--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,7 +2,7 @@
   --white: #ffffff;
   --gray-100: #e1e1e6;
   --gray-300: #a8a8b3;
-  --gray-900: #121214; 
+  --gray-900: #121214;
 }
 
 * {
@@ -13,11 +13,22 @@
 
 body {
   background: var(--gray-900);
-  color: var(--white);  
+  color: var(--white);
 }
 
-body, input, textarea, select, button {
-  font: 400 1rem 'Roboto', sans-serif;
+#__next {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1rem "Roboto", sans-serif;
 }
 
 button {
@@ -29,14 +40,14 @@ a {
   text-decoration: none;
 }
 
-@media(max-width: 1080px){ 
+@media (max-width: 1080px) {
   html {
     font-size: 93.75%; //15px: Percentual em relação ao tamanho de fonte padrão dos navegadores.
   }
 }
 
-@media(max-width: 720px){
+@media (max-width: 720px) {
   html {
-    font-size:87.5%; //14px: Percentual em relação ao tamanho de fonte padrão dos navegadores.
+    font-size: 87.5%; //14px: Percentual em relação ao tamanho de fonte padrão dos navegadores.
   }
 }
